syntax = "proto3";

package project.planton.provider.digitalocean.digitaloceancontainerregistry.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/digitalocean/digitaloceancontainerregistry/v1/spec.proto";
import "project/planton/provider/digitalocean/digitaloceancontainerregistry/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

// digital-ocean-container-registry
message DigitalOceanContainerRegistry {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = "digital-ocean.project-planton.org/v1"];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = "DigitalOceanContainerRegistry"];

  //metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  DigitalOceanContainerRegistrySpec spec = 4 [(buf.validate.field).required = true];

  //status
  DigitalOceanContainerRegistryStatus status = 5;
}

// digital-ocean-container-registry status
message DigitalOceanContainerRegistryStatus {
  //stack-outputs
  //  digital-ocean-container-registry stack-outputs
  DigitalOceanContainerRegistryStackOutputs outputs = 1;
}
